{
  "distance": "Distance {distance} Km",
  "stop_save": "Stop and Save",
  "start": "Start",
  "message_sent_succes": "Message successfully sent",
  "message": "Message",
  "enter_message": "Enter your message here ...",
  "send_message": "Send message",
  "password_validation": "Password must contains:\n- At least one digit\n- At least one uppercase letter\n- At least one special character\n- Minimum length of 8 characters",
  "same_password": "Password is not the same!",
  "changes_succes_sent": "Changes successfully sent",
  "edit_profile": "Edit your profile",
  "change_avatar": "Change avatar",
  "change_username": "Change username",
  "change_pass": "Change password",
  "send_link": "Send link",
  "add_place": "Add place",
  "edit_place": "Edit your place",
  "confirm": "Confirm",
  "save": "Save",
  "link_sent": "Link sent",
  "dont_have_account": "You don't have account!",
  "account_created_succes": "Account successfully created!",
  "account_exist": "Account already exist!",
  "restart_link_info": "You will receive an email with link to restart your password.",
  "restart_password": "Restart Password",
  "enter_email": "Enter email",
  "enter_pass": "Enter password",
  "forgot_pass": "Forgot password ?",
  "back": "Go Back",
  "home": "Home",
  "profile": "Profile",
  "name": "Name",
  "place_form": "Place Form",
  "wiki_link": "Wikipedia link",
  "topic_link": "Topic page link",
  "google_maps_error": "Could not launch Google Maps",
  "location_select": "Select a location on the map",
  "description": "Description",
  "info": "Informations:",
  "type_info": "\u2022 Type - {type}",
  "period_info": "\u2022 Period - {period}",
  "sortof_info": "\u2022 Sortof - {sortof}",
  "date_info": "\u2022 Found - {date}",
  "succes_place_edited": "Place edited successfully",
  "show_google_maps": "Show on Google Maps",
  "founded_by": "Founded by:",
  "sign_up": "Sign Up",
  "sign_in": "Sign In",
  "sign_out": "Sign Out",
  "succes_signed_in": "Successfully signed in!",
  "bad_credentials": "Bad credentials!",
  "not_member": "Not a member?",
  "question_account": "Already have account?",
  "create_account": "Create account now",
  "sign_account": "Sign In now",
  "or": "Or continue with",
  "pass": "Password",
  "username": "Username",
  "failed_load_places": "Failed to load places",
  "failed_load_trails": "Failed to load trails",
  "failed_load_types": "Failed to load types",
  "failed_load_periods": "Failed to load periods",
  "failed_load_sortof": "Failed to load sortof",
  "link_to_active_info": "You will receive an email with link to activate your account.",
  "cancel": "Cancel",
  "close": "Close",
  "send": "Send",
  "delete_warning": "Are you sure you want to delete {name}?",
  "title": "Title",
  "enter_title": "Enter a title",
  "enter_username": "Enter username",
  "navigate_trail": "Navigate to trail",
  "succes_added_trail": "Trail edited successfully",
  "edit_trail": "Edit your trail",
  "time_and_distance": "Time: {time}\nDistance: {distance} Km\n",
  "succes_trail_added": "Trail added successfully",
  "my_places": "My Places",
  "my_trails": "My Trails",
  "trail_form": "Trail Form",
  "field_info": "This field can't be empty!",
  "confirm_pass": "Confirm Password",
  "pass_similar": "Password must be similar",
  "hide_pass": "Hide password",
  "show_pass": "Show password",
  "field_required": "Field is required",
  "invalid_name": "Invalid name forma",
  "select_type": "Select Type",
  "select_period": "Select Period",
  "select_sortof": "Select Sortof",
  "pls_select_type": "Please select a type",
  "pls_select_period": "Please select a period",
  "pls_select_sortof": "Please select a sortof",
  "pl": "Polish",
  "en": "English",
  "de": "Deutsch",
  "ru": "Russian",
  "your_trails": "Your trails",
  "no_trails_added": "No trails added",
  "your_places": "Your Places",
  "no_place_added": "No place added",
  "contact_us": "Contact Us",
  "welcome": "Welcome!",
  "welcome_msg": "Discover the rich history around you with Miejsca Pamięci, your ultimate dataset for historical places. If you come across any interesting find, feel free to add it — every piece of knowledge counts!",
  "continue_btn": "Continue",
  "place_added_succes": "Place added successfully",
  "stored_places_upload_succes": "Stored places uploaded successfully",
  "delete": "Delete",
  "edit": "Edit",
  "edit_info": "You will be able only to edit basic information, for more editing options please visit our website.",
  "ok": "ok",
  "place_deleted": "Place deleted",
  "trail_deleted": "Trail deleted",
  "preview": "Preview",
  "alert_error": "Something went wrong. Please try again later.",
  "oops": "Oops!",
  "no_internet_info": "It seems like you're not connected to the internet right now.",
  "but": "but ...",
  "still_add_places": "You can still add your places",
  "select_pictures": "Select Pictures",
  "found_by": "Found by\n{username}",
  "username_info": "\u2022 Found by - {username}",
  "found": "Found {date}",
  "links": "Links",
  "link_error": "Cannot open the link!",
  "existing": "Existing",
  "non_existing": "Non-existing",
  "commemorative_plaque": "Commemorative plaque",
  "commemorative_monument": "Commemorative monument",
  "war_cemetery": "War cemetery",
  "civil_cemetery": "Civil cemetery",
  "burial_site": "Burial site",
  "execution_site": "Execution site",
  "battlefield": "Battlefield",
  "archaeological_site": "Archaeological site",
  "wayside_shrine": "Wayside shrine",
  "historical_monument": "Historical monument",
  "poland_before_third_partition": "Poland before the Third Partition (<1795)",
  "napoleonic_wars": "Napoleonic Wars (1799-1815)",
  "poland_after_partitions": "Poland after the Partitions (1795-1914)",
  "world_war_I": "World War I (1914-1918)",
  "interwar_period": "Interwar period (1918-1939)",
  "world_war_II": "World War II (1939-1945)",
  "stalinist_period": "Stalinist period (1945-1953)",
  "permissions_denied": "Location permissions are denied",
  "permissions_permanently_denied": "Location permissions are permanently denied"
}
